# cim-domain-workflow

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PHASE_1_COMPLETION_SUMMARY.md  README.md  WORKFLOW_IMPLEMENTATION_PROGRESS.md  claude.md  flake.nix  readme.md  tarpaulin-report.json  workflow-implementation-progress.md
.claude/: CLAUDE.md
.claude/agents/: domain-expert.md
.claude/context/: domain-context.md  workflow-templates.md
.claude/patterns/: cross-domain-workflows.md  domain-composition.md  event-driven-workflows.md  universal-workflow-engine.md
.claude/standards/: cim-compliance.md  event-integrity.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  release.yml
benches/: workflow_benchmarks.rs
deployment/configs/: default-config.toml  production-config.toml
deployment/k8s/: namespace.yaml
deployment/monitoring/: grafana-dashboard.json  prometheus-rules.yaml
doc/: api.md  consolidated-workflow-design.md  implementation-roadmap.md  migration-guide.md  user-stories.md
doc/progress/: progress.json
docker/: Dockerfile
docs/algebra/: README.md  SUBJECT_ALGEBRA.md  hopfield.md
examples/: contextgraph_export.rs  cross_domain_coordination.rs  cross_domain_workflow.rs  document_domain_composition.rs  error_handling_resilience_demo.rs  nats_orchestration_demo.rs  nats_workflow_demo.rs  observability_demo.rs  performance_demo.rs  simple_order_workflow.rs  state_machine_demo.rs  template_library_demo.rs
scripts/: deploy.sh  release.sh
src/: compatibility.rs  domain_events.rs  lib.rs
src/aggregate/: mod.rs  workflow.rs
src/algebra/: event_algebra.rs  mod.rs  operations.rs  subject_algebra.rs
src/commands/: mod.rs  step_commands.rs  workflow_commands.rs
src/composition/: extensions.rs  mod.rs  template_library.rs  templates.rs
src/core/: engine.rs  mod.rs  state_machine.rs  template_engine.rs
src/error/: mod.rs  recovery.rs  resilience.rs  tracing.rs  types.rs
src/events/: cross_domain_events.rs  mod.rs  step_events.rs  task_events.rs  workflow_events.rs
src/handlers/: cross_domain_handler.rs  mod.rs  nats_event_publisher.rs  workflow_command_handler.rs  workflow_context_handler.rs  workflow_execution_handler.rs  workflow_nats_handler.rs  workflow_query_handler.rs
src/messaging/: correlation.rs  mod.rs  publishers.rs
src/observability/: alerts.rs  dashboards.rs  health.rs  metrics.rs  mod.rs  tracing.rs
src/performance/: memory.rs  metrics.rs  mod.rs  (+2 more)
tests/: cross_domain_workflow_test.rs  example_scenarios.rs  nats_integration_test.rs  universal_workflow_engine_tests.rs  workflow_domain_tests.rs  workflow_user_story_tests.rs  workflow_user_story_tests.rs.bak
(+42 files in other folders)
