[package]
name = "cim-domain-workflow"
version = "0.3.0"
edition = "2021"
authors = ["The Cowboy AI"]
description = "Workflow domain module for CIM - handles business process workflows"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thecowboyai/cim-domain-workflow"
keywords = ["workflow", "domain", "business-process", "cim"]
categories = ["data-structures", "algorithms"]

[dependencies]
# Core domain dependency
cim-domain = { git = "https://github.com/TheCowboyAI/cim-domain.git", branch = "main" }

# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
async-nats = "0.41"
futures = "0.3"
async-trait = "0.1"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
num_cpus = "1.16"

[dev-dependencies]
pretty_assertions = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[[bench]]
name = "workflow_benchmarks"
harness = false

[[example]]
name = "state_machine_demo"
path = "examples/state_machine_demo.rs"

[[example]]
name = "simple_order_workflow"
path = "examples/simple_order_workflow.rs"

[[example]]
name = "contextgraph_export"
path = "examples/contextgraph_export.rs"

[[example]]
name = "nats_workflow_demo"
path = "examples/nats_workflow_demo.rs"

[[example]]
name = "cross_domain_workflow"
path = "examples/cross_domain_workflow.rs"

[[example]]
name = "observability_demo"
path = "examples/observability_demo.rs"

[[example]]
name = "performance_demo"
path = "examples/performance_demo.rs"
